500-fluentd-daemonset.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: pas-system # PAS4K8s namespace
  labels:
    app: fluentd
    version: v1
spec:
  template:
    metadata:
      labels:
        app: fluentd
        version: v1
    spec:
      serviceAccountName: fluentd-service-account
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd
        image: logcache/cf-k8s-logging
        imagePullPolicy: Always
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: fluentd-config
          mountPath: /fluentd/etc
        - name: varlog
          mountPath: /var/log
        - name: varvcapstore  # Because of PKS-based PAS4K8s
          mountPath: /var/vcap/store
        - name: dockercontainers
          mountPath: /var/lib/docker/containers
        - mountPath: /ca
          name: ca
          readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: fluentd-config
        configMap:
          name: fluentd-config
      - name: varlog
        hostPath:
          path: /var/log
      - name: varvcapstore
        hostPath:
          path: /var/vcap/store
      - name: dockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: ca
        secret:
          secretName: log-cache-ca
