500-log-cache-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-cache
  namespace: pas-system
  labels:
    app: log-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-cache
  template:
    metadata:
      labels:
        app: log-cache
    spec:
      containers:
      - name: syslog-server
        image: logcache/syslog-server
        ports:
        - containerPort: 8082
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
        - mountPath: /log-cache-certs
          name: log-cache-certs
          readOnly: true
        - mountPath: /syslog-server-certs
          name: syslog-server-certs
          readOnly: true
        - mountPath: /metrics-certs
          name: metrics-certs
          readOnly: true
      - name: log-cache
        image: logcache/log-cache
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
        - mountPath: /log-cache-certs
          name: log-cache-certs
          readOnly: true
        - mountPath: /metrics-certs
          name: metrics-certs
          readOnly: true
      - name: gateway
        image: logcache/log-cache-gateway
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
        - mountPath: /log-cache-certs
          name: log-cache-certs
          readOnly: true
        - mountPath: /gateway-certs
          name: gateway-certs
          readOnly: true
        - mountPath: /metrics-certs
          name: metrics-certs
          readOnly: true
      volumes:
      - name: ca
        secret:
          secretName: log-cache-ca
      - name: log-cache-certs
        secret:
          secretName: log-cache
      - name: syslog-server-certs
        secret:
          secretName: log-cache-syslog
      - name: gateway-certs
        secret:
          secretName: log-cache-gateway
      - name: metrics-certs
        secret:
          secretName: log-cache-metrics
