fluentd-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: pas-system # PAS4K8s namespace
  labels:
    k8s-app: fluentd-app-logging
    version: v1
spec:
  template:
    metadata:
      labels:
        k8s-app: fluentd-app-logging
        version: v1
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      imagePullSecrets:
      - name: image-registry-credentials # Created by PAS4K8s
      containers:
      - name: fluentd
        image: harbor.SYSTEM_DOMAIN/library/cf-k8s-logging:TAG
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varvcapstore  # Because of PKS-based PAS4K8s
          mountPath: /var/vcap/store
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varvcapstore
        hostPath:
          path: /var/vcap/store
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
