400-log-cache-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: log-cache
  namespace: pas-system
spec:
  selector:
    app: log-cache
  ports:
  - protocol: TCP
    port: 8081
