400-syslog-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: log-cache-syslog
  namespace: pas-system
spec:
  selector:
    app: log-cache
  ports:
  - protocol: TCP
    port: 8082
